--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body{
  font-family: sans-serif;
+    background-color: #22313F;
 }
 
 
@@ -90,7 +91,7 @@ button.previous:active {
 	width:98%;
 	height:;
 	float:left;
-	background-color:#2980b9;
+	background-color:#2c3e50;
 	color:white;
     font-size: 1.4em;
 }
@@ -125,10 +126,10 @@ button.previous:active {
 }
 
 .dir {
-	background-color:#ADD8E6;
+	background-color:#34495e;
 	padding:12px;
 	height:95%;
-	color:#505050;
+	color:#FFFFFF;
     font-size:14.5px;
 }
 
@@ -147,6 +148,7 @@ p.step {
 }
 
 .card {
+    color:black;
   padding:1.5rem;
   box-shadow:0 1px 2px #aaa;
   background:white;
